Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117493

lupdate's complaint about ts file's missing language attribute is unhelpful

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.9.0 FF
    • 6.5
    • Tools: Linguist
    • None
    • All
    • 1b074d68f (dev)

      Using an lupdate on the attached folder outputs an error like this:

      C:\work\MCU_Training_Material\Training_Repos\CofeeMaker\imports\Helpers>C:\Qt\6.5.0\mingw_64\bin\lupdate.exe -recursive . -ts translations/translation.ja_JP.ts
      Scanning directory '.'...
      File C:/work/MCU_Training_Material/Training_Repos/CofeeMaker/imports/Helpers/translations/translation.ja_JP.ts won't be updated: it contains translation but the target language is not recognized 

      But for french and Germany, it worked fine.

      C:\work\MCU_Training_Material\Training_Repos\CofeeMaker\imports\Helpers>C:\Qt\6.5.0\mingw_64\bin\lupdate.exe -recursive . -ts translations/translation.fr_FR.ts
      Scanning directory '.'...
      Updating 'translations/translation.fr_FR.ts'...
          Found 16 source text(s) (6 new and 10 already existing)C:\work\MCU_Training_Material\Training_Repos\CofeeMaker\imports\Helpers>
      C:\work\MCU_Training_Material\Training_Repos\CofeeMaker\imports\Helpers>C:\Qt\6.5.0\mingw_64\bin\lupdate.exe -recursive . -ts translations/translation.de_DE.ts
      Scanning directory '.'...
      Updating 'translations/translation.de_DE.ts'...
          Found 16 source text(s) (6 new and 10 already existing) 

        For Gerrit Dashboard: QTBUG-117493
        # Subject Branch Project Status CR V

            masoud.jami Masoud Jami
            mikio_hirai Mikio Hirai
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes