lupdate: More Expressive Error Message for Empty Language

Provide a more clear error message when a .ts file contains
translations but does not specify any languages.

Fixes: QTBUG-117493
Change-Id: If5e59199f6d24246e6a22bce408ddd94da3ea97a
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>